[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scenes/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://GFX/HUD/bannerHanging.png" type="Texture" id=2]
[ext_resource path="res://GFX/HUD/coin_bronze.png" type="Texture" id=3]
[ext_resource path="res://Scenes/hud/score.fnt" type="BitmapFont" id=4]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource/name = "anim"
length = 0.5
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("coin_icon:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "anim"
length = 0.5
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("life_icon:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[node name="HUD" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Banner" type="TextureFrame" parent="."]

rect/scale = Vector2( 1.3, 1.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2244.0
margin/top = 47.0
margin/right = 2512.0
margin/bottom = 106.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="coin_icon" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2278.0
margin/top = 70.0
margin/right = 2338.0
margin/bottom = 131.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="coin_count" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2324.0
margin/top = 74.0
margin/right = 2396.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 4 )
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="life_icon" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2426.0
margin/top = 71.0
margin/right = 2478.0
margin/bottom = 142.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="life_count" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2465.0
margin/top = 75.0
margin/right = 2537.0
margin/bottom = 107.0
custom_fonts/font = ExtResource( 4 )
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_coin" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/anim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_life" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/anim = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


